--- a/platform/android/MapboxGLAndroidSDKTestApp/src/main/AndroidManifest.xml
+++ b/platform/android/MapboxGLAndroidSDKTestApp/src/main/AndroidManifest.xml
@@ -871,7 +871,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.FeatureOverviewActivity" />
         </activity>
-
         <activity
                 android:name=".activity.maplayout.RecyclerViewActivity"
                 android:description="@string/description_recyclerview"
@@ -879,6 +878,17 @@
             <meta-data
                     android:name="@string/category"
                     android:value="@string/category_maplayout" />
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".activity.FeatureOverviewActivity" />
+        </activity>
+        <activity
+                android:name=".activity.fragment.NestedViewPagerActivity"
+                android:description="@string/description_recyclerview"
+                android:label="@string/activity_nested_viewpager">
+            <meta-data
+                    android:name="@string/category"
+                    android:value="@string/category_fragment" />
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".activity.FeatureOverviewActivity" />
