--- a/circle.yml
+++ b/circle.yml
@@ -287,7 +287,7 @@ commands:
     - run:
         name: Get Code Coverage Report
         command: 
-          build-ios-test
+          - build-ios-test
           bash <(curl -s https://codecov.io/bash) -t $CODECOV_UPLOAD_TOKEN
         no_output_timeout: 2m
   build-macos-test:
