--- a/circle.yml
+++ b/circle.yml
@@ -287,7 +287,8 @@ commands:
       - build-ios-test
       - run:
         name: Get Code Coverage Report
-          command: bash <(curl -s https://codecov.io/bash) -t $CODECOV_UPLOAD_TOKEN
+          command: |
+            bash <(curl -s https://codecov.io/bash) -t $CODECOV_UPLOAD_TOKEN
         no_output_timeout: 2m
   build-macos-test:
     steps:
